# zipformer-rnnt-cpp

./: .gitignore  CMakeLists.txt  DOCKER.md  README.md
convert/: convert_to_rknn.py  download_models.py  export_onnx_streaming.py  fix_encoder_onnx.py
docker/: Dockerfile.cross-compile  Dockerfile.rknn-toolkit2
models/: decoder.rknn  joiner.rknn
scripts/: build_arm64.sh
src/: audio_utils.cpp  audio_utils.hpp  bpe_tokenizer.cpp  bpe_tokenizer.hpp  main.cpp  rnnt_decoder.cpp  rnnt_decoder.hpp  rnnt_joiner.cpp  rnnt_joiner.hpp  streaming_asr.cpp  streaming_asr.hpp  zipformer_encoder.cpp  zipformer_encoder.hpp
